@@ -1,3 +1,9 @@
+2008-09-11 Borut Razem <borut.razem AT siol.net>
+
+	* tests\bug-221100.c, tests\shifts.c, tests\absolute.c:
+	  applied patch #2105615: Some PIC16 testcase fixlets
+	  thanks Mauro Giachero
+
 2008-09-08 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* src/z80/gen.c (genCmpGt, genCmpLt): fixed bug 2094505
